# udacity_census_bureau_project

./: .flake8  .render.yaml  main.py  model_card_template.md  pyproject.toml  render.yaml  requirements.txt  sanitycheck.py
.github/workflows/: manual.yml
model/: data.py  encoder.joblib  inference.py  label_binarizer.joblib  model.py  train_model.py
tests/: conftest.py  live_api.py  test_data.py  test_live_api.py  test_main.py  test_process_data_inference.py  test_slicing.py  test_train_and_inference.py
